# SDIR

./: .gitignore  CMakeLists.txt  Kuka KR120 2700-2 SDIR.ttt  README.md
VREP-SDIR/: VREP-SDIR.sln
VREP-SDIR/Debug/: VREP-SDIR.exp  VREP-SDIR.ilk  VREP-SDIR.lib
VREP-SDIR/VREP-SDIR/: VREP-SDIR.cpp  VREP-SDIR.vcxproj  VREP-SDIR.vcxproj.filters
VREP-SDIR/VREP-SDIR/Debug/: VREP-SDIR.pch  vc141.idb
VREP-SDIR/VREP-SDIR/Debug/VREP-SDIR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VREP-SDIR.lastbuildstate  VREP-SDIR.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VREP-SDIR/VREP-SDIR/include/: optimize_lin_web_lib.hpp
VREP-SDIR/VREP-SDIR/x64/Debug/: VREP-SDIR.pch  vc141.idb
VREP-SDIR/VREP-SDIR/x64/Debug/VREP-SDIR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VREP-SDIR.lastbuildstate
src/: main.cpp
src/ctrl/kinematics/direct/: fw_kinematics.cpp  fw_kinematics.h  fw_kinematics_function.h
src/ctrl/kinematics/inverse/: inverse_kinematics.cpp  inverse_kinematics.h  inverse_kinematics_function.cpp  inverse_kinematics_function.h
src/ctrl/pathplanner/lin/: lin.cpp
src/ctrl/postypes/: TMatrix.cpp
